--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rhapsody",
   "version": "1.0.0",
   "description": "This website will be developed around the Angular JS framework.",
-  "main": "app.js",
+  "main": "./public/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,20 @@
   },
   "homepage": "https://github.com/sevensidedsilver/festivalsite#readme",
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "angular-auth0": "^2.0.0-beta.2",
+    "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.17.2",
     "cors": "^2.8.3",
-    "express": "^4.15.2",
-    "massive": "^3.0.0-rc1"
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
+    "massive": "^3.0.0-rc1",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0"
   }
 }
